--- a/DApps/eth-ipfs/package.json
+++ b/DApps/eth-ipfs/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "fs-extra": "^6.0.1",
-    "ipfs-api": "^22.2.1",
-    "react": "^16.4.1",
+    "bootstrap": "^3.3.7",
+    "fs-extra": "^5.0.0",
+    "ipfs-api": "^18.1.1",
+    "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
-    "web3": "^1.0.0-beta.34"
+    "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.8",
+    "react-scripts": "1.1.0",
+    "web3": "^1.0.0-beta.26"
   },
   "scripts": {
     "start": "react-scripts start",
